--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-scripts": "3.1.1",
+    "request-promise": "^4.2.4",
     "xmlhttprequest": "^1.8.0"
   },
   "scripts": {
