--- a/package.json
+++ b/package.json
@@ -3,10 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.19.0",
+    "moment": "^2.24.0",
+    "node-fetch": "^2.6.0",
     "raw-loader": "^3.1.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-scripts": "3.1.1",
+    "request": "^2.88.0",
     "request-promise": "^4.2.4",
     "xmlhttprequest": "^1.8.0"
   },
