--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": "^0.19.0",
+    "bootstrap": "^4.3.1",
     "moment": "^2.24.0",
     "node-fetch": "^2.6.0",
     "raw-loader": "^3.1.0",
